<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:id="@+id/mainLayoutId"
    android:background="@color/darkBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:src="@drawable/header_register" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/registerActivityName"
                    style="@style/FormItemHeader" />
                <EditText
                    android:id="@+id/name" style="@style/FormItemField"/>

                <TextView
                    android:text="@string/registerActivityEmail"
                    style="@style/FormItemHeader" />
                <EditText
                    android:id="@+id/email" style="@style/FormItemField"/>

                <TextView
                    android:text="@string/registerActivityGender"
                    style="@style/FormItemHeader" />

                <Spinner
                    android:id="@+id/gender"
                    style="@style/SpinnerItemStyle"
                    android:entries="@array/genders"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:text="@string/registerActivityPass"
                    style="@style/FormItemHeader" />
                <EditText
                    android:id="@+id/pass"
                    android:inputType="textPassword"
                    style="@style/FormItemField"/>

                <TextView
                    android:text="@string/registerActivityPass"
                    style="@style/FormItemHeader" />
                <EditText
                    android:id="@+id/passConfirmation"
                    android:inputType="textPassword"
                    style="@style/FormItemField"/>

                <Button
                    android:id="@+id/btnSave"
                    style="@style/FormButton"
                    android:text="@string/registerActivitySave"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>